# ai-orchestrator

./: .gitattributes  .gitignore  INSTRUCTION.md  README.md  arkanoid.py  find_agents.py  install.sh  output.py  pyproject.toml  requirements.txt  run_server.ps1  run_test.py  server_log.txt  start_all_cores.cmd  start_opencode.cmd  start_orchestrator.ps1  start_termux.sh  test_orch.py  test_quick.py  test_timing.py  update_model.sh  стихотворение.txt
.github/workflows/: build-apk.yml
.opencode/: alive  checkpoint.json
ai_orchestrator/: __init__.py  __main__.py  agent.py  agentic_chat.py  checkpoint_system.py  config.py  desktop_ui.html  history.py  llama_cpp_backend.py  orchestrator.py  plugin_system.py  prompt_booster.py  providers.py  ssh_client.py  tools.py
ai_orchestrator/histories/: agent_maker.json  analyst.json  code_dev.json  coder.json  coder_agent.json  devops.json  doc_agent.json  engineer.json  file_manager.json  game_dev.json  navigator.json  offline_helper.json  pr_agent.json  researcher.json  search_agent.json  tinyllama.json  uml_designer.json
ai_orchestrator/static/: dashboard.html  index.html
ai_orchestrator/tools/: __init__.py
installers/: ai-orchestrator-installer.iss  ai-orchestrator-web.bat  ai-orchestrator.bat  build.ps1  generate-icon.ps1  install.ps1  install_deps.ps1  launch.bat  launch.ps1  terminal-profile.json  windows-integration.ps1
installers/android/: build-android.sh  install-termux.sh  termux-autostart.sh
installers/linux/: build-deb.sh  install.sh
plugins/: __init__.py  example_plugin.py
(+31 files in other folders)
